# print-nfc-strip

./: Cargo.toml  README.md
src/: main.rs
