[package]
name = "print-nfc-strip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = { git = "https://github.com/mehmetoguzderin/unicode-normalization", branch = "no-compatibility" }
